--- a/React/yelloware-app/package.json
+++ b/React/yelloware-app/package.json
@@ -1,8 +1,10 @@
 {
   "name": "yelloware-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -10,9 +12,10 @@
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-native-svg": "^13.0.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
-    
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
