--- a/React/yelloware-app/package.json
+++ b/React/yelloware-app/package.json
@@ -12,7 +12,6 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
-    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,10 +20,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
